--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.preference:preference:1.1.1'
 
-    implementation 'androidx.work:work-multiprocess:2.5.0'
+    implementation 'androidx.work:work-multiprocess:2.6.0'
 
     implementation 'com.google.dagger:hilt-android:2.38.1'
     annotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
@@ -80,6 +80,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.0.1"
     implementation "androidx.camera:camera-lifecycle:1.0.1"
     implementation "androidx.camera:camera-view:1.0.0-alpha28"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
