--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation 'androidx.work:work-multiprocess:2.6.0'
 
     implementation 'com.google.dagger:hilt-android:2.38.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     annotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
 
     implementation "androidx.camera:camera-camera2:1.0.1"
