--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,29 +46,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
 
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
-
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'io.github.vicmikhailau:MaskedEditText:4.0.7'
-
-    implementation platform('com.google.firebase:firebase-bom:28.4.0')
-    implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-analytics'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
-
-    implementation 'org.jetbrains:annotations:22.0.0'
-
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
@@ -84,6 +61,30 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.0.1"
     implementation "androidx.camera:camera-lifecycle:1.0.1"
     implementation "androidx.camera:camera-view:1.0.0-alpha28"
+
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'io.github.vicmikhailau:MaskedEditText:4.0.7'
+    implementation 'id.zelory:compressor:2.1.1'
+
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+
+    implementation 'org.jetbrains:annotations:22.0.0'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
